Faceblur effect and overflow issues

--- a/QuizWebsite/WebContent/User.css
+++ b/QuizWebsite/WebContent/User.css
@@ -6,6 +6,9 @@
 
 #masthead-friends-div {
 	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 	#masthead-friends-div > span {
@@ -25,6 +28,28 @@
 		    -o-filter: blur(1px);
 		    -ms-filter: blur(1px);
 		    filter: blur(1px);
+		    -webkit-transition:0.9s;
+		    -moz-transition:0.9s;
+		    -o-transition:0.9s;
+		    -ms-transition:0.9s;
+		    transition:0.9s;
+		}
+		#masthead-friends-div > span > a:hover {
+			-webkit-filter: blur(0px);
+		    -moz-filter: blur(0px);
+		    -o-filter: blur(0px);
+		    -ms-filter: blur(0px);
+		    filter: blur(0px);
+		    opacity:0.70;
+		    filter:Alpha(opacity=070); /* IE8 and earlier */
+		}
+
+		#masthead-friends-div > span > a:hover +
+		#masthead-friends-div > span > a,
+		#masthead-friends-div > span > a +
+		#masthead-friends-div > span > a:hover {
+			opacity:0.60;
+			filter:Alpha(opacity=060); /* IE8 and earlier */
 		}
 
 #user-photo-pad {
